# Magic-Mouse-Pad

./: .gitmodules  CMakeLists.txt  Magic Mouse Pad.sln  README.md
dumppos/: dumppos.c  dumppos.vcxproj  dumppos.vcxproj.filters
magicmouse/: magicmouse.cpp  magicmouse.rc  magicmouse.vcxproj  magicmouse.vcxproj.filters  resource.h  tray_window.cpp  tray_window.h
magicmousepad/: appsettings.json  client.cpp  client.h  magicmousepad.cpp  magicmousepad.rc  magicmousepad.vcxproj  magicmousepad.vcxproj.filters  mouse_pad.cpp  mouse_pad.h  renderer.cpp  renderer.h  resource.h  server.cpp  server.h  settings.cpp  settings.h
mmouse/: CommandLine.cpp  CommandLine.h  MouseSubscriber.cpp  MouseSubscriber.h  mmouse.afdesign  mmouse.cpp  mmouse.rc  mmouse.vcxproj  mmouse.vcxproj.filters  pch.cpp  pch.h  resource.h  window.cpp  window.h
mmpcli/: CMakeLists.txt  mmpcli.rc  mmpcli.vcxproj  mmpcli.vcxproj.filters  resource.h
mmpcli/include/: mmp_configuration.h  mmp_key.h  mmp_mouse_button.h  mmpapi.h  mmpcli.h  mmpendpoint.h  mmpmsg.h  mmpthreadname.h  mmptrace.h  mmptrace.inl
mmpcli/src/: dllmain.cpp  mmp_client.cpp  mmp_client.h  mmp_client.inl  mmp_configuration.cpp  mmpcli.cpp  mmpendpoint.cpp  mmpmsg.cpp  mmpthreadname.cpp  trace.h  trace.inl
mmpd/: Client.cpp  Client.h  CommandLine.cpp  CommandLine.h  Renderer.cpp  Renderer.h  Server.cpp  Server.h  Server.inl  State.cpp  State.h  mmpd.cpp  mmpd.rc  mmpd.vcxproj  mmpd.vcxproj.filters  pch.h  resource.h  window.cpp  window.h
mmpdcli/: MouseSubscriber.cpp  ResourceHelper.cpp  endpoint.cpp  mmpdcli.vcxproj  mmpdcli.vcxproj.filters  receive.cpp  serveraddress.cpp
mmpdcli/include/MagicMousePad/: MouseButton.h  MouseSubscriber.h  ResourceHelper.h  byteorder.h  cmdline.h  endpoint.h  messages.h  onexit.h  onexit.inl  receive.h  serveraddress.h  tokenise.h  tokenise.inl
