# CMakeLists.txt
# Copyright © 2025 Visualisierungsinstitut der Universität Stuttgart.
# Licensed under the MIT licence. See LICENCE file in the project root for detailed information.


# CMake is only used to include the client library in CMake-based projects, so
# the only thing we build is this library.
add_subdirectory(mmpcli)
